--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Timetable generator</title>
 </head>
 <body>
