--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <script src="js/script.js"></script>
     <script src="js/scripts.js"></script>
     <title>Timetable generator</title>
+    <div id="navbar">
+        <a href="#home">Home</a>
+    </div>
+
+    <div class="images">
+        <p>PyTimetables</p>
+        <button class="button">Generate Timetable</button>
+    </div>
 </head>
 <body>
     
