--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <script src="js/script.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Timetable generator</title>
-    <div id="navbar">
-        <a href="#home">Home</a>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
+        <script src="js/script.js"></script>
+        <script src="js/scripts.js"></script>
+        <title>Timetable generator</title>
 
-    <div class="images">
-        <p>PyTimetables</p>
-        <button class="button">Generate Timetable</button>
-    </div>
-</head>
-<body>
-    
-</body>
+        <div id="navbar">
+            <a href="#home">Home</a>
+        </div>
+
+        <div class="images">
+            <p>PyTimetables</p>
+            <button class="button">Generate Timetable</button>
+        </div>
+    </head>
+    <body>
+
+    </body>
 </html>
