this adds an id so as to display the contact us part in the footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </ul>
                 <div class="footer-copyright text-center py-3">
                     © 2019 Copyright:
-                    <a href="https://mdbootstrap.com/education/bootstrap/">PyTimetables.com</a>
+                    <a href="https://PyTimetable.com">PyTimetable.com</a>
                 </div>
             </div>
         </footer>
