this adds social media icons to the footer together with a copyright

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                 </ul>
                 <div class="footer-copyright text-center py-3">
-                    © 2019 Copyright:
+                    © 2019 Copyright
                     <a href="https://PyTimetable.com">PyTimetable.com</a>
                 </div>
             </div>
