--- a/forms.html
+++ b/forms.html
@@ -12,6 +12,13 @@
 
 <body>
   <div> </div>
+
+  <div class="form-group" id="teachers">
+    <div class="col-sm-10">
+      <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
+      <input type="number" class="form-control" min="1" max="10">
+    </div>
+  </div>
 </body>
 
 </html>
