--- a/forms.html
+++ b/forms.html
@@ -6,19 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Timetable generator</title>
-  <link rel="stylesheet" href="bootstrap.css" type="text/css">
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
   <div> </div>
-
-  <div class="form-group" id="teachers">
-    <div class="col-sm-10">
-      <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
-      <input type="number" class="form-control" min="1" max="10">
+  <form>
+    <div class="form-group" id="teachers">
+      <div class="col-sm-10">
+        <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
+        <input type="number" class="form-control" min="1" max="10">
+      </div>
     </div>
-  </div>
+
+    <div class="form-group" id="subjects">
+      <div class="col-sm-10">
+        <label for="NumberofSubjects" class="col-sm-2 col-form-label">Number of subjects:</label>
+        <input type="number" class="form-control" min="1" max="10">
+      </div>
+    </div>
+
+    <div class="form-group row m-4 p-3">
+      <div class="col-sm-6">
+        <button type="button" class="btn btn-outline-success" id="next">Submit</button>
+      </div>
+    </div>
+  </form>
 </body>
 
 </html>
