make the table responsive

--- a/forms.html
+++ b/forms.html
@@ -39,6 +39,7 @@
   </form>
 
   <!-- Create timetable -->
+  <div class="table-responsive">
   <table class="table">
     <thead>
       <tr>
@@ -107,6 +108,7 @@
       </tr>
     </tbody>
   </table>
+</div>
 </body>
 
 </html>
