--- a/forms.html
+++ b/forms.html
@@ -11,104 +11,109 @@
 </head>
 
 <body>
-   <!-- Teachers names and Ids -->
-  <div> </div>
+  <div class="container">
+    <!-- Teachers names and Ids -->
+    <div> </div>
 
-  <form id="forms">
-    <!-- Add number of teachers -->
-    <div class="form-group" id="teachers">
-      <div class="col-sm-10">
-        <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
-        <input type="number" class="form-control" min="1" max="10">
+    <form id="forms">
+      <!-- Add number of teachers -->
+      <div class="form-group" id="teachers">
+        <div class="col-sm-10">
+          <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
+          <input type="number" class="form-control" min="1" max="10">
+        </div>
       </div>
-    </div>
 
-    <!-- Add number of subjects -->
-    <div class="form-group" id="subjects">
-      <div class="col-sm-10">
-        <label for="NumberofSubjects" class="col-sm-2 col-form-label">Number of subjects:</label>
-        <input type="number" class="form-control" min="1" max="10">
+      <!-- Add number of subjects -->
+      <div class="form-group" id="subjects">
+        <div class="col-sm-10">
+          <label for="NumberofSubjects" class="col-sm-2 col-form-label">Number of subjects:</label>
+          <input type="number" class="form-control" min="1" max="10">
+        </div>
       </div>
-    </div>
 
-    <div class="form-group row m-4 p-3">
-      <div class="col-sm-6">
-        <button type="button" class="btn btn-outline-success" id="next">Submit</button>
+      <div class="form-group row m-4 p-3">
+        <div class="col-sm-6">
+          <button type="button" class="btn btn-outline-success" id="next">Submit</button>
+        </div>
       </div>
-    </div>
-  </form>
+    </form>
 
-  <!-- Create timetable -->
-  <div class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col"></th>
-        <th scope="col">8:30-9:30</th>
-        <th scope="col">9:30-10:30</th>
-        <th scope="col">10:3-11:30</th>
-        <th scope="col">11:30-12:30</th>
-        <th scope="col">12:30-2:00</th>
-        <th scope="col">2:00-3:00</th>
-        <th scope="col">3:00-4:00</th>
-        <th scope="col">4:00-5:00</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">MONDAY</th>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="table-primary td" rowspan="5" align="center">L<br><br>U<br><br>N<br><br>C<br><br>H</td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-      </tr>
-      <tr>
-        <th scope="row">TUESDAY</th>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-      </tr>
-      <tr>
-        <th scope="row">WEDNESDAY</th>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-      </tr>
-      <tr>
-        <th scope="row">THURSDAY</th>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-      </tr>
-      <tr>
-        <th scope="row">FRIDAY</th>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-        <td class="td"></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <!-- Create timetable -->
+
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">8:30-9:30</th>
+            <th scope="col">9:30-10:30</th>
+            <th scope="col">10:3-11:30</th>
+            <th scope="col">11:30-12:30</th>
+            <th scope="col">12:30-2:00</th>
+            <th scope="col">2:00-3:00</th>
+            <th scope="col">3:00-4:00</th>
+            <th scope="col">4:00-5:00</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">MONDAY</th>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="table-primary td" rowspan="5" align="center">L<br><br>U<br><br>N<br><br>C<br><br>H</td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+          </tr>
+          <tr>
+            <th scope="row">TUESDAY</th>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+          </tr>
+          <tr>
+            <th scope="row">WEDNESDAY</th>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+          </tr>
+          <tr>
+            <th scope="row">THURSDAY</th>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+          </tr>
+          <tr>
+            <th scope="row">FRIDAY</th>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+            <td class="td"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
+  </div>
+
 </body>
 
 </html>
