--- a/forms.html
+++ b/forms.html
@@ -20,7 +20,7 @@
       <div class="form-group" id="teachers">
         <div class="col-sm-10">
           <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
-          <input type="number" class="form-control" min="1" max="10">
+          <input type="number" class="form-control" id="teachers2" min="1" max="10">
         </div>
       </div>
 
@@ -28,7 +28,7 @@
       <div class="form-group" id="subjects">
         <div class="col-sm-10">
           <label for="NumberofSubjects" class="col-sm-2 col-form-label">Number of subjects:</label>
-          <input type="number" class="form-control" min="1" max="10">
+          <input type="number" class="form-control" id="subjects2" min="1" max="10">
         </div>
       </div>
 
