--- a/forms.html
+++ b/forms.html
@@ -8,6 +8,8 @@
   <title>Timetable generator</title>
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
+  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </head>
 
 <body>
