this adds a link to the button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="images">
         <p>PyTimetables</p>
-        <button class="button">Generate Timetable</button>
+        <a href="forms.html" class=" btn btn-success">Generate Timetable</a>
     </div>
 
     <footer class="footer">
