--- a/forms.html
+++ b/forms.html
@@ -14,9 +14,6 @@
 
 <body>
   <div class="container">
-    <!-- Teachers names and Ids -->
-    <div> </div>
-
     <form id="forms">
       <!-- Add number of teachers -->
       <div class="form-group" id="teachers">
@@ -26,6 +23,9 @@
         </div>
       </div>
 
+       <!-- Teachers names and Ids -->
+    <div id="teacherInput"> </div>
+
       <!-- Add number of subjects -->
       <div class="form-group" id="subjects">
         <div class="col-sm-10">
@@ -33,6 +33,9 @@
           <input type="number" class="form-control" id="subjects2" min="1" max="10">
         </div>
       </div>
+
+      <div id="numberOfSubjects"> </div>
+
 
       <div class="form-group row m-4 p-3">
         <div class="col-sm-6">
