--- a/forms.html
+++ b/forms.html
@@ -8,6 +8,10 @@
   <title>Timetable generator</title>
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
   <script src="js/scripts.js"></script>
 </head>
