--- a/forms.html
+++ b/forms.html
@@ -21,7 +21,7 @@
     <form id="forms">
       <!-- Add number of teachers -->
       <div class="form-group" id="teachers">
-        <div class="col-sm-10">
+        <div class="col-sm-10 hidden">
           <label for="teachersnumber" class="col-sm-2 col-form-label">Number of teachers:</label>
           <input type="number" class="form-control" id="teachers2" min="1" max="10">
         </div>
@@ -32,7 +32,7 @@
 
       <!-- Add number of subjects -->
       <div class="form-group" id="subjects">
-        <div class="col-sm-10">
+        <div class="col-sm-10 hidden">
           <label for="NumberofSubjects" class="col-sm-2 col-form-label">Number of subjects:</label>
           <input type="number" class="form-control" id="subjects2" min="1" max="10">
         </div>
