--- a/forms.html
+++ b/forms.html
@@ -46,7 +46,7 @@
       </div>
     </form>
 
-    <div class="form-group row m-4 p-3" style="display:none">
+    <div class="form-group row m-4 p-3" id="submitForm" style="display:none">
       <div class="col-sm-6">
         <button type="button" class="btn btn-outline-success" id="submit">Submit</button>
       </div>
