--- a/forms.html
+++ b/forms.html
@@ -77,7 +77,7 @@
             <td class="td"></td>
             <td class="td"></td>
             <td class="td"></td>
-            <td class="table-primary td" rowspan="5" align="center">L<br><br>U<br><br>N<br><br>C<br><br>H</td>
+            <td class="table-primary" rowspan="5" align="center">L<br><br>U<br><br>N<br><br>C<br><br>H</td>
             <td class="td"></td>
             <td class="td"></td>
             <td class="td"></td>
