This adds the navbar to the forms html

--- a/forms.html
+++ b/forms.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="index.html" style="font-size: 30px;"><strong><span class="text-info"
+          style="font-size:1.5rem;">py</span>Timetables</strong></a>
+    </nav>
     <article class="index-form p-5">
         <div class="container center">
             <div class="row align-items-center">
@@ -90,7 +94,8 @@
                                 <td class="td"></td>
                                 <td class="td"></td>
                                 <td class="td"></td>
-                                <td class="table-primary" rowspan="5" style="text-align:center">L<br><br>U<br><br>N<br><br>C<br><br>H</td>
+                                <td class="table-primary" rowspan="5" style="text-align:center">L<br><br>U<br><br>N<br><br>C<br><br>H
+                                </td>
                                 <td class="td"></td>
                                 <td class="td"></td>
                                 <td class="td"></td>
