--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#" style="font-size: 30px;"><strong><span class="text-info"
+        <a class="navbar-brand" href="index.html" style="font-size: 30px;"><strong><span class="text-info"
                     style="font-size:1.5rem;">py</span>Timetables</strong></a>
     </nav>
     <div class="container">
